1.0.0
- Dispatcher uses linear distance between depot and provider when choosing between equally valid trains
- localized console Messages for log levels 1, 2 and 3
- localized Items & Fluids in Messages (thanks to MagmaMcFry)

0.10.2
- train composition signals factor in train direction, so the lowest bit always represents the entity next to the stop
- changed "(UpdateStopParkedTrain): couldn't assign train id" to debug level

0.10.1
- increased performance by reading wagons inventory size from data.raw (thanks to folk)

0.10.0
- added Limit Trains signal to Provider & Requester

0.9.13
- fixed: ignore min delivery size signal being ignored
- fixed: error when disabling RailTanker Mod

0.9.12
- fixed possible variable conflicts https://forums.factorio.com/viewtopic.php?f=23&t=43392

0.9.11
- message filter uses message age instead of message count to suppress messages
- increased detailed messages about order generation from log level 3 to 4

0.9.10
- adapted to creative mode 0.2.8
- fixed invalid entity in on_robot_built_entity

0.9.9
- fixed: attempt to get length of field 'activeDeliveries' (a number value) on log level >= 3

0.9.8
- fixed: error on schedules with circuit wait conditions containing virtual signals

0.9.7
- fixed: all stops constantly being set to Ignore Minimum Delivery Size
- sorted signal order
- reduced default stop_timeout to 2min

0.9.6
- added Ignore Minimum Delivery Size signal for providers

0.9.5
- lamp shows status "active delivery" (yellow) reliable after changing stop name or removing train during delivery
- stacker depots no longer trigger delivery time out warnings

0.9.4
- fixed MP desync from message filter
- added warning when changing log settings in game (only use config.lua for MP games)

0.9.3
- changed license
- fixed possible error when removing mods adding items

0.9.2
- disabled left over debug messages
- certain messages ignore message filter to keep logfile consistent

0.9.1