@@ -30,6 +30,7 @@ ltn-max-trains = Limit Trains
 min-delivery-size = Minimum Delivery Size
 stop-priority = Provider Priority
 ltn-no-min-delivery-size = Ignore Minimum Delivery Size
+ltn-locked-slots = Locked Slots per Wagon
 
 [ltn-message]
 error-duplicated-unit-number = [LTN] Error: Duplicated unit_number __1__.
